Adding some tests

--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "description": "scrapes some stuff",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node ./node_modules/mocha/bin/mocha"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "csv": "^1.1.0",
+    "csv-generate": "^1.0.0",
     "lodash": "^4.16.1",
     "request": "^2.75.0"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.0.2",
+    "sinon": "^1.17.6"
   }
 }
